--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,5 @@ Thumbs.db
 # User Data
 # InMotion.xcodeproj/project.xcworkspace/xcuserdata/tonykarppinen.xcuserdatad/
 # InMotion.xcodeproj/xcuserdata/tonykarppinen.xcuserdatad/
+
+.DS_Store
