--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,9 @@ Thumbs.db
 # InMotion.xcodeproj/xcuserdata/tonykarppinen.xcuserdatad/
 
 .DS_Store
+
+InMotion.xcodeproj/project.xcworkspace/xcuserdata/matiaspacelli.xcuserdatad/UserInterfaceState.xcuserstate
+
+InMotion.xcodeproj/project.xcworkspace/xcuserdata/matiaspacelli.xcuserdatad/UserInterfaceState.xcuserstate
+
+InMotion.xcodeproj/xcuserdata/matiaspacelli.xcuserdatad/xcdebugger/Breakpoints.xcbkptlist
